--- a/Math_3080_Final.ipynb
+++ b/Math_3080_Final.ipynb
@@ -22,6 +22,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This data set was compiled by the ASA and is intended for educational purposes. It is included in the House Prices data science competition hosted on Kaggle. The data itself is based off of the Boston Housing dataset which was compiled by the U.S. Census surrounding the Boston Massachusetts area. \n",
+    "\n",
+    "This data came in two sets: a training set and a test set. Both have approximately the same number of observations, but the training set has one more column with the sales price included. The intention of this data set is to train your model on the training set and be able to accurately predict the housing price of the test set. Because of this distinction, I will clean both data sets similarly, but do most of my EDA and analysis of the training set. At the end, I will apply the regression to the test set. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 191,
    "metadata": {},
@@ -2336,6 +2345,13 @@
    ],
    "source": [
     "sns.histplot(x=\"SalePrice\", data=train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When looking at sales price in particular, I did not want outliers to effect the model. After creating a histogram to see if there were any major or obvious outliers, I saw that the distribution of sales price was slightly right skewed (something I should take note of). In this process, I also created a function to find the number of outliers and the min and max by using the IQR of the Sales Price column. \n"
    ]
   },
   {
@@ -9472,6 +9488,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here I created multiple linear regressions to see some of the different relationships between variables. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 215,
    "metadata": {},
@@ -9680,6 +9703,14 @@
     "\n",
     "rmsle = rmsle_metric(x_predict, x_true)\n",
     "print(\"Root Mean Square Logorithmic Error: $\" + str(rmsle))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this project, I only did single variable regressions of the sales price compared to one variable. In order to create a better model and prediction for the Sales Price of homes, a multi linear regression model could be used to include more independent variables than just one at a time. It would be better to predict the Sales Price based off of multiple dependent variables.\n",
+    "Another plausible jumping off point for this project could be a multiple logistic regression analysis. With this type of regression, we could better predict the Sales Price based on factors like if it was built before or after 1950’s and also whether it has a Garage, and whether it has A/C or not, etc.\n"
    ]
   }
  ],
